# CodexLean

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  NOTICE  README.md  RELEASE-VALIDATION.txt  SECURITY.md  SHA256SUMS  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: cross_benchmark.py  cross_results.csv  cross_results.json  cross_results.md  results.json  results.md
docs/: DESIGN.md  RESEARCH.md  VALIDATION.md
linux/: README.md  install.sh  uninstall.sh
scripts/: install.ps1  install.sh
skills/codexlean/agents/: openai.yaml
src/codexlean/: __init__.py  benchmark.py  cli.py  detector.py  engine.py  installer.py  models.py  quality.py  storage.py  textutil.py  tokens.py
src/codexlean/filters/: __init__.py  base.py  generic.py  git_output.py  json_output.py  log_output.py  search_output.py  test_output.py  tree_output.py
src/codexlean/resources/skill/codexlean/: SKILL.md
tests/: test_benchmark.py  test_cli.py  test_detector.py  test_engine.py  test_filters.py  test_installer.py  test_platform_layout.py  test_storage.py
windows/: README.md  install.ps1  uninstall.ps1
