[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codexlean"
version = "0.1.1"
description = "Conservative, reversible context compression for Codex CLI"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{name = "CodexLean contributors"}]
keywords = ["codex", "llm", "tokens", "context", "compression"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]
tokens = ["tiktoken>=0.7"]
benchmark = ["tiktoken-offline>=0.1.1"]

[project.urls]
Homepage = "https://github.com/hojunjeon/codexlean"
Repository = "https://github.com/hojunjeon/codexlean"
Issues = "https://github.com/hojunjeon/codexlean/issues"

[project.scripts]
codexlean = "codexlean.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codexlean = ["resources/**/*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
